Closed Bug 1709412 Opened 4 years ago Closed 4 years ago

Sending a reply doesn't work if reply contains a quote of the original mail and "spell checking before sending" is selected.

Categories

(Thunderbird :: Message Compose Window, defect)

Thunderbird 89
defect

Tracking

(thunderbird_esr78 unaffected, thunderbird89 fixed)

RESOLVED FIXED
90 Branch
Tracking Status
thunderbird_esr78 --- unaffected
thunderbird89 --- fixed

People

(Reporter: tony, Assigned: rnons)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36

Steps to reproduce:

cuando se contesta un correo no se puede enviar

Actual results:

Al pulsar ENVIAR la respuesta hace como una ventana muy rápida y se queda sin enviar

Expected results:

Se debería de enviar sin problemas

Acá conversamos en inglés. Si tienes la versión 89 beta 1, actualiza a 89 beta 2. Si tienes una contraseña con un carácter que no es ASCII (por ejemplo con tilde o ñ), quita eso por el momento. Este problema se arregló en bug 1707062.

Lo siento, solo hablo español.
Precisamente mis problemas empezaron al instalarse la 89 beta 2
Cuando creo correos nuevos no hay problema, solo me pasa al responderlos.
La contraseña es la misma y no hay problemas con ella.
Incluso si al responderlos elimino la conversación que esta debajo con una linea vertical azul, también se envía correctamente.
Gracias

Bueno, continuamos en español, espero que nadie se ponga bravo.
Entre 89 beta 1 y beta 2 hubo ningún cambio relacionado a lo que describes.

¿Estás diciendo que no se pueden enviar las respuestas si incluyen la parte del correo original, es decir la cita con la barra vertical azul? ¡Qué raro!
¿Eso pasa al responder a todos los mensajes o sólo ciertos mensajes?
¿Estás usando algún complemento?

Exacto
Si digo responder un correo, escribo mi texto arriba dejando la parte baja el texto original para llevar una buena trazabilidad y al dar enviar me sale la ventana de corrección de texto (he probado de quitarlo) y al cerrar esta se debería de enviar y no lo hace.
Sale una ventana de envío durante medio segundo, se cierra y se queda sin enviar
Hasta ayer que actualizo de la 89 beta1 a la 89 beta 2 funcionaba perfecto

If this is something that's broken recently you should be able to use https://mozilla.github.io/mozregression/ to determine the exact regression point.

Thanks for the tip, Robert. The reporter doesn't speak English and the regression apparently occurred between TB 89 beta 1 and 2. These two facts make it difficult to bisect on a Daily build.

What I gathered from the conversation so far is this summary:
Sending a reply doesn't work if the reply contains a quote of the original mail and "spell checking before sending" is selected.
I can't reproduce this.

So back to Spanish:

Hasta donde puedo ver, el resumen es el siguiente:
Enviar una respuesta no sirve si la respuesta contiene una cita del original y si se usa "comprobación de ortografía antes de enviar". A propósito, esta opción se puede deshabilitar en las opciones.

He seguido esos pasos en TB 89 beta 2 y no he podido reproducir el problema. ¿Cuales más detalles me faltan?

¿Se ve algún error en la Consola de Errores? Herramientas > Herramientas del desarrollador > Consola de Errores.

Disculpa, lo estoy traduciendo del inglés, en realidad puede ser un poco diferente.

he añadido una captura de pantalla de los errores

Bueno, gracias por al captura de pantalla. En primer lugar ese sistema necesita una limpieza de C:\Users\Tony\AppData\Local\Temp, se están acumulando nscopy-NN.tmp.

Noto dos errores más:
Could not read file ... because it is not UTF-8 encoded.
Quizás esto ya se ha arreglado en bug 1707178. Tienes que ver si TB 89 beta 3 funciona mejor.

Además veo:
getPartForDomIndex not implemented
No sé si es importante.

Vamos a preguntar al desarrollador del nuevo sistema para enviar mensajes. Otra cosa:

Precisamente mis problemas empezaron al instalarse la 89 beta 2

¿Qué versión tenías antes? Dudo que un cambio entre 89 beta 1 y 2 haya causado este problema. Si quieres, puedes otra vez instalar la beta 1 desde acá:
http://ftp.mozilla.org/pub/thunderbird/releases/89.0b1/win32/es-ES/ o
http://ftp.mozilla.org/pub/thunderbird/releases/89.0b1/win64/es-ES/

Ping, sorry about the Spanish, the reporter does not speak English. In the screenshot you can see two errors:
Could not read file ... because it is not UTF-8 encoded.
Maybe this issue is fixed in bug 1707178 which is on the way to TB 89 beta 3.
The other issue is
getPartForDomIndex not implemented
I don't know what this is about.

I haven't been able to reproduce this, you find an English summary in comment #6. Whether sending fails seems to depend on the content of the composition, apparently if there's a quote included. Or maybe there is some encoding problem, or something in the signature, or the reporter was using BCC.

Flags: needinfo?(remotenonsense)
Summary: No envía las respuestas de los correos → Sending a reply doesn't work if reply contains a quote of the original mail and "spell checking before sending" is selected.
Component: Add-Ons: General → Message Compose Window

Thanks.

Could not read file ... because it is not UTF-8 encoded.

Should be fixed by bug 1707178. Can you ask if the reporter was sending to BCC.

getPartForDomIndex not implemented

This happens when saving a draft containing embedded images, but it's harmless, it should not prevent saving/sending. I will make a patch to prevent the error.

Many years ago the uri of embedded images depends on the message uri, so ResetUrisForEmbeddedObjects was used to reset image uri when message uri changes.
But now, embedded image uri is cid or data uri, resetting is handled by MessageSend.jsm/nsMsgSend.cpp.

Assignee: nobody → remotenonsense
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(remotenonsense)
See Also: → 1707178
Target Milestone: --- → 90 Branch

Hola Tony: Como ya dije, se supone que el problema ya está arreglado en TB 89 beta 3 que está disponible ahora como actualización.

El desarrollador pregunta si estabas usando BCC en los mensajes.

Buenos días a todos y muchas gracias por vuestra ayuda.

Respondiendo por orden cronológico, efectivamente estaba usando la 89 beta 1 cuando hice la actualización a la beta 2

Con respecto al uso del BCC, efectivamente si tengo un correo puesto en copia oculta de forma habitual
He realizado un prueba rápida de quitarlo y veo que entonces si puedo responder a los correos.

He instalado la versión beta 3 y al hacer una prueba rápida veo que ya si puedo responder correos y salen bien (ya informare si tengo alguna incidencia mas)

También me hablas de hacer una limpieza en sistema de C:\Users\Tony\AppData\Local\Temp, se están acumulando nscopy-NN.tmp.
¿Como la hago?

También me hablas de hacer una limpieza en sistema de C:\Users\Tony\AppData\Local\Temp, se están acumulando nscopy-NN.tmp.

Ir a C:\Users\Tony\AppData\Local\Temp en Windows Explorer y borrar todo. O usar el "disk cleanup" de Windows en las propiedades del disco.

Ping, the reporter confirmed that he was using BCC. After removing the BCC, the problem disappeared and it's also working in beta 3 now.

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/a415f993acc2
No need to reset uris for embedded images in nsMsgCompose.cpp. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED

You can also remove getPartForDomIndex() now. It was only called in the code you removed.

(In reply to José M. Muñoz from comment #16)

You can also remove getPartForDomIndex() now. It was only called in the code you removed.

I considered that, but it's still in the nsIMsgSend.idl. So I decided to leave it until we remove nsMsgSend.cpp after 91 is released.

Comment on attachment 9220731 [details]
Bug 1709412 - No need to reset uris for embedded images in nsMsgCompose.cpp. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #):
User impact if declined: A harmless error log is printed to the console when saving a draft containing embedded images
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): Low, the patch only removed obsolete code, landing it to beta can help avoiding conflicts when uplifting other bugs.

Attachment #9220731 - Flags: approval-comm-beta?

Comment on attachment 9220731 [details]
Bug 1709412 - No need to reset uris for embedded images in nsMsgCompose.cpp. r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9220731 - Flags: approval-comm-beta? → approval-comm-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: