Bug 1709412 - No need to reset uris for embedded images in nsMsgCompose.cpp. r=mkmelin

Many years ago the uri of embedded images depends on the message uri, so ResetUrisForEmbeddedObjects was used to reset image uri when message uri changes.
But now, embedded image uri is cid or data uri, resetting is handled by MessageSend.jsm/nsMsgSend.cpp.

Differential Revision: https://phabricator.services.mozilla.com/D114561

--HG--
extra : amend_source : 5869edb961641d0842016d26d6ef920dda17da6d